--- a/linux/deploy_vm/deploy_vm_from_iso.yml
+++ b/linux/deploy_vm/deploy_vm_from_iso.yml
@@ -282,39 +282,39 @@
             service_name: "{{ wait_service_name }}"
             wait_service_status: "running"
 
-    - name: "Upgrade Oracle Linux 9.0 kernel from UEK R7 GA to latest UEK R7"
+    - name: "Upgrade Oracle Linux 8.x/9.x kernel to latest UEK R7"
       when:
         - guest_os_ansible_distribution == "OracleLinux"
-        - guest_os_ansible_distribution_ver == "9.0"
+        - guest_os_ansible_distribution_major_ver in [8, 9]
         - "'uek' in guest_os_ansible_kernel"
       block:
         - include_tasks: ../../common/vm_take_snapshot.yml
           vars:
-            snapshot_name: "OL_9.0GA_UEK"
+            snapshot_name: "OL_8.x_9.x_UEK"
 
-        - name: "Get Oracle Linux 9.0 UEK R7 version before upgrading"
+        - name: "Get Oracle Linux 8.x/9.x UEK version before upgrading"
           ansible.builtin.set_fact:
-            ol9_uekr7_is_upgraded: false
-            ol9_uekr7_before_upgrade: "{{ guest_os_ansible_kernel }}"
+            ol8or9_uekr7_is_upgraded: false
+            ol8or9_uekr7_before_upgrade: "{{ guest_os_ansible_kernel }}"
 
         - name: "Add Oracle Linux online repos for upgrading kernel"
           include_tasks: ../utils/add_official_online_repo.yml
 
-        - name: "Update Oracle Linux 9.0 to latest UEK R7"
+        - name: "Update Oracle Linux 8.x/9.x to latest UEK R7"
           ansible.builtin.shell: "yum update --nogpgcheck -y"
-          register: ol9_uekr7_upgrade_result
+          register: ol8or9_uekr7_upgrade_result
           delegate_to: "{{ vm_guest_ip }}"
 
-        - name: "Set the fact of that Oracle Linux 9.0 UEK R7 is upgraded"
+        - name: "Set the fact of that Oracle Linux 8.x/9.x UEK R7 is upgraded"
           ansible.builtin.set_fact:
-            ol9_uekr7_is_upgraded: true
+            ol8or9_uekr7_is_upgraded: true
           when:
-            - ol9_uekr7_upgrade_result is defined
-            - ol9_uekr7_upgrade_result.rc is defined
-            - ol9_uekr7_upgrade_result.rc == 0
+            - ol8or9_uekr7_upgrade_result is defined
+            - ol8or9_uekr7_upgrade_result.rc is defined
+            - ol8or9_uekr7_upgrade_result.rc == 0
 
-        - name: "Check Oracle Linux 9.0 kernel UEK R7 is upgraded"
-          when: ol9_uekr7_is_upgraded
+        - name: "Check Oracle Linux 8.x/9.x kernel UEK R7 is upgraded"
+          when: ol8or9_uekr7_is_upgraded
           block:
             - name: "Reboot Oracle Linux"
               include_tasks: ../utils/reboot.yml
@@ -325,18 +325,18 @@
             - name: "Refresh Linux system info"
               include_tasks: ../utils/get_linux_system_info.yml
 
-            - name: "Get Oracle Linux 9.0 UEK R7 version after upgrading"
+            - name: "Get Oracle Linux 8.x/9.x UEK R7 version after upgrading"
               ansible.builtin.set_fact:
-                ol9_uekr7_after_upgrade: "{{ guest_os_ansible_kernel }}"
+                ol8or9_uekr7_after_upgrade: "{{ guest_os_ansible_kernel }}"
 
-            - name: "Check Oracle Linux 9.0 kernel UEK R7 is upgraded successfully"
+            - name: "Check Oracle Linux 8.x/9.x kernel UEK R7 is upgraded successfully"
               ansible.builtin.assert:
                 that:
-                  - ol9_uekr7_after_upgrade is version(ol9_uekr7_before_upgrade, '>')
+                  - ol8or9_uekr7_after_upgrade is version(ol8or9_uekr7_before_upgrade, '>')
                 fail_msg: >-
-                  Oracle Linux 9.0 UEK R7 upgrading failed. Before upgrade, the UEK R7
-                  version is '{{ ol9_uekr7_before_upgrade }}', after upgrade the UEK R7
-                  version is '{{ ol9_uekr7_after_upgrade }}'.
+                  Oracle Linux 8.x/9.x UEK R7 upgrading failed. Before upgrade, the UEK R7
+                  version is '{{ ol8or9_uekr7_before_upgrade }}', after upgrade the UEK R7
+                  version is '{{ ol8or9_uekr7_after_upgrade }}'.
   rescue:
     - name: "Collect serial port log at test failure"
       include_tasks: collect_serial_port_log.yml
