--- a/linux/deploy_vm/create_unattend_install_iso.yml
+++ b/linux/deploy_vm/create_unattend_install_iso.yml
@@ -8,6 +8,8 @@
       {%- if unattend_install_conf is match('Ubuntu/Desktop/Ubiquity') -%}Ubuntu-Ubiquity
       {%- elif unattend_install_conf is match('(Ubuntu/Server)|(Ubuntu/Desktop/Subiquity)') -%}Ubuntu-Subiquity
       {%- elif unattend_install_conf is match('(SLE|openSUSE)/') and unattend_install_conf.split('/')[1] is version('16.0', '>=') -%}Agama
+      {%- elif unattend_install_conf is match('Kylin/Server') -%}Kylin_Server
+      {%- elif unattend_install_conf is match('Kylin/Desktop') -%}Kylin_Desktop
       {%- else -%}{{ unattend_install_conf.split('/')[0] }}
       {%- endif -%}
 
@@ -56,7 +58,7 @@
       include_tasks: create_unattend_install_conf_file.yml
 
     - name: "Create unattend install ISO file for {{ unattend_installer }}"
-      when: unattend_installer not in ['Ubuntu-Ubiquity', 'Photon', 'Debian', 'FreeBSD', 'Pardus']
+      when: unattend_installer not in ['Ubuntu-Ubiquity', 'Photon', 'Debian', 'FreeBSD', 'Pardus', 'Kylin_Desktop']
       block:
         - name: "Set fact of generated unattend install ISO file name"
           ansible.builtin.set_fact:
@@ -74,7 +76,7 @@
             create_iso_vol_ident: 'OEMDRV'
 
     - name: "Rebuild OS installation ISO for {{ unattend_installer }}"
-      when: unattend_installer in ['Ubuntu-Ubiquity', 'Photon', 'Debian', 'FreeBSD', 'Pardus']
+      when: unattend_installer in ['Ubuntu-Ubiquity', 'Photon', 'Debian', 'FreeBSD', 'Pardus', 'Kylin_Desktop']
       block:
         - name: "Set fact of the rebuilt new OS installation ISO file name"
           ansible.builtin.set_fact:
